Fixed: Admin bar overlap issue with menu.

--- a/style.css
+++ b/style.css
@@ -3339,8 +3339,8 @@ article.panel-placeholder {
 		margin-right: -20%;
 	}
 }
-
-@media screen and (max-width: 768px) and (min-width: 882px) {
+	
+@media screen and (max-width: 782px) and (min-width: 768px) {
 
     .admin-bar .site-navigation-fixed.navigation-top,
     .admin-bar .site-navigation-hidden.navigation-top {
